--- a/style/css/tipos-de-cafe.css
+++ b/style/css/tipos-de-cafe.css
@@ -11,11 +11,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
-
-
 }
-
-
 
 body {
     background-color: var(--bg-color);
@@ -23,8 +19,6 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
-
-
 
 header {
     width: 100%;
@@ -35,47 +29,128 @@ header {
 
 }
 
-
 h1 {
     padding: 20px 150px;
     color: var(--color-detalles);
     display: flex;
-    font-size: 2.5em;
+    font-size: 2.6em;
     font-family: var(--title-family);
     text-transform: uppercase;
 }
 
-@media screen and (max-width: 800px) {
+.info {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    text-align: center;
+    z-index: 1;
+    animation: backInUp;
+    animation-duration: 1.3s;
+    text-align: center;
+    justify-content: center;
+}
 
+.info-h2 {
+    font-size: 2em;
+    font-family: var(--title-family);
+    margin-top: 3.5em;
+    color: var(--color-detalles);
+}
+
+.info-ul {
+    margin-left: -2.2rem;
+}
+
+.info-li {
+    padding: .2em;
+    list-style: none;
+    font-family: var(--text-family);
+    color: var(--color-principal);
+}
+
+
+p {
+    font-size: 1.5em;
+}
+
+
+section {
+    width: 100%;
+    height: 90px;
+    margin-top: auto;
+    background-color: var(--color-principal);
+    text-align: right;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+section ul {
+    width: 100%;
+    max-width: 895px;
+    text-align: right;
 
 }
 
+section ul li {
+    display: inline-block;
+    padding: 24px 25px;
+
+}
+
+i {
+    font-size: 2.5em;
+    color: var(--color-detalles);
+}
+
+i:visited {
+    color: var(--color-detalles);
+}
+
+
 @media screen and (max-width: 500px) {
+
 
     h1 {
         font-size: 2.5em;
-  
+
+    }
+
+    .footer {
+        width: 100%;
+        text-align: center;
+    }
+    
+    section ul {
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 420px) {
 
 
     h1 {
-        font-size: 2.4em;
         padding: 20px;
         padding-left: 2em;
 
     }
 
+    .info-h2 {
+        font-size: 1.8em;
+        margin-top: 4em;
+    }
+
+    p {
+        font-size: 1.2em;
+    }
+
+    .footer {
+        width: 100%;
+        text-align: center;
+    }
+    
+    section ul {
+        width: 100%;
+    }
+
+
 }
-
-
-
-/*<li class="info-li"><p>Cafe con Leche...............$280</p></li>
-<li class="info-li"><p>Americano.......................$310</p></li>
-<li class="info-li"><p>Cappuccino......................$340</p></li>
-<li class="info-li"><p>Expresso Lungo...............$260</p></li>
-<li class="info-li"><p>Macchiato.........................$390</p></li>
-<li class="info-li"><p>Flat...................................$350</p></li>
-<li class="info-li"><p>Submarino........................$330</p></li>
-<li class="info-li"><p>Lagrima............................$290</p></li>*/
