--- a/style/css/postres.css
+++ b/style/css/postres.css
@@ -137,12 +137,14 @@ i:visited {
         width: 100%;
         text-align: center;
     }
-        
+    
     section ul {
         width: 100%;
+        text-align: left;
+        justify-content: flex-start;
     }
         
 }
 
 
-    }
+    
