--- a/style/css/sumate-a-nosotros.css
+++ b/style/css/sumate-a-nosotros.css
@@ -238,12 +238,14 @@ i:visited {
 
 
 
-
     .footer {
+         width: 100%;
         text-align: center;
     }
-
+    
     section ul {
         width: 100%;
+        text-align: left;
+        justify-content: flex-start;
     }
 }
