--- a/style/css/tipos-de-cafe.css
+++ b/style/css/tipos-de-cafe.css
@@ -150,6 +150,8 @@ i:visited {
     
     section ul {
         width: 100%;
+        text-align: left;
+        justify-content: flex-start;
     }
 
 
